welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: reassignment to val
	else if (a=b && b=c) {
                  ^